[gd_scene load_steps=5 format=3 uid="uid://cq433km1sovbc"]

[ext_resource type="Texture2D" uid="uid://db7qosvl34h7k" path="res://images/rock.png" id="1_5m148"]
[ext_resource type="Script" path="res://code/rock.gd" id="1_h878n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p8epd"]
radius = 88.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7be0l"]
size = Vector2(112, 112)

[node name="rock" type="Node2D"]
script = ExtResource("1_h878n")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_p8epd")
debug_color = Color(0.658824, 0.321569, 1, 0.419608)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_7be0l")

[node name="Rock" type="Sprite2D" parent="StaticBody2D"]
texture_filter = 1
scale = Vector2(8, 8)
texture = ExtResource("1_5m148")
hframes = 3

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
